--- a/Labs/Lab 1/index.html
+++ b/Labs/Lab 1/index.html
@@ -7,6 +7,13 @@
     </head>
     <body>
         <h1>Hello, everyone!</h1>
-        <p>Welcome to the Foundations of Frontend Web Development course</p>
+        <p>Welcome to the Foundations <br/>of Frontend Web Development course</p>
+        <hr/>
+        <pre>
+                First Line
+                Second Line
+        </pre>
+        <p>Click <a href="www.w3schools.com" target="_blank">here</a></p>
+
     </body>
 </html>
