--- a/Labs/Lab 1/index.html
+++ b/Labs/Lab 1/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Hello, everyone!</h1>
-        <p>Welcome to the Foundations <br/>of Frontend Web Development course</p>
+        <p>Welcome to the Foundations <br/>of Frontend Web Development course!</p>
         <hr/>
         <pre>
                 First Line
