--- a/Labs/Lab 2/index.html
+++ b/Labs/Lab 2/index.html
@@ -1,2 +1,21 @@
 <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>IBU</title>
+    </head>
+    <body>
+        <center><img src="ibu.png" alt="International Burch University" style="width:200px;margin:20px 0px"></center>
+        <center><h2>International Burch University</h2></center>
+        <h1 style="margin:40px 0px;">Login Page</h1>
+        <p style="margin:40px 0px;font-size: 20px;">Welcome.<br>Please Login.</p>
+        <h3>Email</h3>
+        <form>
+            <label for="email">Email:</label><br>
+            <input type="text" id="email" name="email"><br>
+            <label for="password">Password:</label><br>
+            <input type="password" id="password" name="password"><br>
+        </form>
+    </body>
 </html>
