--- a/Labs/Lab 2/index.html
+++ b/Labs/Lab 2/index.html
@@ -6,16 +6,22 @@
         <title>IBU</title>
     </head>
     <body>
-        <center><img src="ibu.png" alt="International Burch University" style="width:200px;margin:20px 0px"></center>
+        <center><img src="ibu.png" alt="International Burch University" style="width:170px;margin:20px 0px"></center>
         <center><h2>International Burch University</h2></center>
-        <h1 style="margin:40px 0px;">Login Page</h1>
-        <p style="margin:40px 0px;font-size: 20px;">Welcome.<br>Please Login.</p>
-        <h3>Email</h3>
-        <form>
-            <label for="email">Email:</label><br>
-            <input type="text" id="email" name="email"><br>
-            <label for="password">Password:</label><br>
-            <input type="password" id="password" name="password"><br>
-        </form>
+        <div style="width: 30%;margin: auto;">
+            <h1 style="margin:40px 0px;">Login Page</h1>
+            <p style="margin:30px 0px;font-size: 20px;">Welcome.<br>Please Login.</p>
+            
+            <form>
+                <label for="email"><b>Email:</b></label><br>
+                <input type="text" id="email" name="email" placeholder="Enter your email" style="padding: 15px 200px 15px 15px;margin-top: 5px;margin-bottom: 30px; width: 50%;"><br>
+                <label for="password"><b>Password:</b></label><br>
+                <input type="password" id="password" name="password" placeholder="Enter your password" style="padding: 15px 200px 15px 15px;margin-top: 5px; width: 50%;"><br>
+            </form>
+        
+        <center><p style="font-size: 17px;">Don't have an account? <a href="registration.html" style="color: black;">Register NOW.</a></p></center>
+        <center><p><a href="forgotPassword.html" style="color: black;">Forgot your password?</a></p></center>
+        <center><h2 style="border: 1px solid; padding:10px; width: 270px;"><a href="home.html" style="text-decoration: none; color: black;">SUBMIT</a></h2></center>
+        </div>
     </body>
 </html>
