--- a/Projects/Project 1/index.html
+++ b/Projects/Project 1/index.html
@@ -1,15 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Hello World</title>
-    </head>
-    <body>
-        <h1>Hello, everyone!</h1>
-        <p>Welcome to the Foundations <br/>of Frontend Web Development course</p>
-        <hr/>
-        <p>Click <a href="www.w3schools.com" target="_blank">here</a></p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GymFlex</title>
+    <link rel="stylesheet" href="style_landingPage.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <div class="container">
+                <ul>
+                    <li><a href="#membership">Membership</a></li>
+                    <li><a href="#exercises">Exercises</a></li>
+                    <li><a href="#goals">Goals</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+                <h1 class="name">GymFlex</h1>
+            </div>
+        </nav>
+    </header>
 
-    </body>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <h2>Your Journey Starts Here</h2>
+                <p>Transform your body, transform your life.</p>
+                <p class="buttons"><a href="#signup" class="btn">Become a Member</a><br><br> Or <br><br><a href="#login" class="btn">Log in</a></p>
+            </div>
+        </section>
+
+        <section class="description">
+            <div class="container">
+                <h2>About GymFlex</h2>
+                <p>Welcome to GymFlex, your ultimate fitness destination! Located in the heart of the city, our state-of-the-art facility offers a wide range of equipment, expert trainers, and motivating atmosphere to help you reach your fitness goals.</p>
+                <p>At GymFlex, we believe that fitness is not just about physical strength but also mental well-being. That's why we provide personalized training programs tailored to your individual needs and preferences.</p>
+                <p>Our web app, GymFlex, extends our commitment to your fitness journey beyond the gym walls. With GymFlex, you can:</p>
+                <ul>
+                    <li>Track your workouts and progress seamlessly</li>
+                    <li>Discover new exercises and workout routines</li>
+                    <li>Set personalized fitness goals and monitor your achievements</li>
+                    <li>Connect with our community for support and motivation</li>
+                    <li>Access expert tips, nutrition advice, and wellness resources</li>
+                </ul>
+                <p>Whether you're a seasoned athlete or just starting your fitness journey, GymFlex is here to empower you every step of the way. Join us and unleash your full potential!</p>
+            </div>
+        </section>
+
+        <section class="gallery">
+            <div class="container">
+                <h2>Gallery</h2>
+                <div class="photo-grid">
+                    <div class="photo"><img src="img2.jpg" alt="Gym Photo 1"></div>
+                    <div class="photo"><img src="img3.jpg" alt="Gym Photo 2"></div>
+                    <div class="photo"><img src="img4.jpg" alt="Gym Photo 3"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="contact">
+            <div>
+                <h2>Contact Us</h2>
+                <p>For inquiries or assistance, feel free to contact us:</p>
+                <p>Email: info@gymflex.com</p>
+                <p>Phone: 123-456-7890</p>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <p>&copy; 2024 GymFlex. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
 </html>
