--- a/Projects/Project 1/index.html
+++ b/Projects/Project 1/index.html
@@ -1,78 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GymFlex</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style_landingPage.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <div class="container">
-                <ul>
-                    <li><a href="#membership">Membership</a></li>
-                    <li><a href="#exercises">Exercises</a></li>
-                    <li><a href="#goals">Goals</a></li>
-                    <li><a href="#">About Us</a></li>
-                </ul>
-                <h1 class="name">GymFlex</h1>
-            </div>
-        </nav>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+      rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+       rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>FITCLUB</title>
+  </head>
+  <body>
+
+    <nav>
+      <div class="nav_logo">
+        <a href="#"><img src="images/logo.png"></a>
+      </div>
+      <ul class="nav_links">
+        <li class="link"><a href="#">Home</a></li>
+        <li class="link"><a href="#">Programs</a></li>
+        <li class="link"><a href="#">Service</a></li>
+        <li class="link"><a href="#">About</a></li>
+        <li class="link"><a href="#">Community</a></li>
+      </ul>
+      <button class="btn">Join Now</button>
+    </nav>
+
+
+    <header class="section_container header_container">
+      <div class="header_content">
+        <span class="bg_blur"></span>
+        <span class="bg_blur header_blur"></span>
+        <h4>BEST FITNESS IN THE CITY</h4>
+        <h1><span>MAKE</span> YOUR BODY SHAPE</h1>
+        <p>
+          Unleash your potential and embark on a journey towards a stronger,
+          fitter, and more confident you. Sign up for 'Make Your Body Shape' now
+          and witness the incredible transformation your body is capable of!
+        </p>
+        <button class="btn">Get Started</button>
+      </div>
+      <div class="header_image">
+        <img src="images/header.png" alt="header">
+      </div>
     </header>
 
-    <main>
-        <section class="hero">
-            <div class="container">
-                <h2>Your Journey Starts Here</h2>
-                <p>Transform your body, transform your life.</p>
-                <p class="buttons"><a href="#signup" class="btn">Become a Member</a><br><br> Or <br><br><a href="#login" class="btn">Log in</a></p>
-            </div>
-        </section>
-
-        <section class="description">
-            <div class="container">
-                <h2>About GymFlex</h2>
-                <p>Welcome to GymFlex, your ultimate fitness destination! Located in the heart of the city, our state-of-the-art facility offers a wide range of equipment, expert trainers, and motivating atmosphere to help you reach your fitness goals.</p>
-                <p>At GymFlex, we believe that fitness is not just about physical strength but also mental well-being. That's why we provide personalized training programs tailored to your individual needs and preferences.</p>
-                <p>Our web app, GymFlex, extends our commitment to your fitness journey beyond the gym walls. With GymFlex, you can:</p>
-                <ul>
-                    <li>Track your workouts and progress seamlessly</li>
-                    <li>Discover new exercises and workout routines</li>
-                    <li>Set personalized fitness goals and monitor your achievements</li>
-                    <li>Connect with our community for support and motivation</li>
-                    <li>Access expert tips, nutrition advice, and wellness resources</li>
-                </ul>
-                <p>Whether you're a seasoned athlete or just starting your fitness journey, GymFlex is here to empower you every step of the way. Join us and unleash your full potential!</p>
-            </div>
-        </section>
-
-        <section class="gallery">
-            <div class="container">
-                <h2>Gallery</h2>
-                <div class="photo-grid">
-                    <div class="photo"><img src="img2.jpg" alt="Gym Photo 1"></div>
-                    <div class="photo"><img src="img3.jpg" alt="Gym Photo 2"></div>
-                    <div class="photo"><img src="img4.jpg" alt="Gym Photo 3"></div>
-                </div>
-            </div>
-        </section>
-
-        <section class="contact">
-            <div>
-                <h2>Contact Us</h2>
-                <p>For inquiries or assistance, feel free to contact us:</p>
-                <p>Email: info@gymflex.com</p>
-                <p>Phone: 123-456-7890</p>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <div>
-            <p>&copy; 2024 GymFlex. All rights reserved.</p>
+    
+    <div class="container">
+      <h2 class="section_header">EXPLORE OUR PROGRAMS</h2>
+      <div class="row">
+        <div class="card mb-3 col-md-3" style="max-width: 18rem;">
+          <div class="card-body">
+            <span><i class="ri-boxing-fill"></i></span>
+            <h5 class="card-title">Strength</h5>
+            <p class="card-text">Embrace the essence of strength as we delve into its various
+              dimensions physical, mental, and emotional.</p>
+              <a href="#">Join Now <i class="ri-arrow-right-line"></i></a>
+          </div>
         </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+        <div class="card mb-3 col-md-3" style="max-width: 18rem;">
+          <div class="card-body">
+            <span><i class="ri-heart-pulse-fill"></i></span>
+            <h5 class="card-title">Physical Fitness</h5>
+            <p class="card-text">It encompasses a range of activities that improve health, strength,<br>
+              flexibility, and overall well-being.</p>
+              <a href="#">Join Now <i class="ri-arrow-right-line"></i></a>
+          </div>
+        </div>
+        <div class="card mb-3 col-md-3" style="max-width: 18rem;">
+          <div class="card-body">
+            <span><i class="ri-run-line"></i></span>
+            <h5 class="card-title">Fat Loss</h5>
+            <p class="card-text">Through a combination of workout routines and expert guidance, we'll
+              empower you to reach your goals.</p>
+              <a href="#">Join Now <i class="ri-arrow-right-line"></i></a>
+          </div>
+        </div>
+        <div class="card mb-3 col-md-3" style="max-width: 18rem;">
+          <div class="card-body">
+            <span><i class="ri-shopping-basket-fill"></i></span>
+            <h5 class="card-title">Weight Gain</h5>
+            <p class="card-text">Designed for individuals, our program offers an effective approach
+              to gaining weight in a sustainable manner.</p>
+              <a href="#">Join Now <i class="ri-arrow-right-line"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 </html>
