--- a/Projects/Project 1/index.html
+++ b/Projects/Project 1/index.html
@@ -12,16 +12,16 @@
   </head>
   <body>
 
-    <nav>
+    <nav id="home">
       <div class="nav_logo">
         <a href="#"><img src="images/logo.png"></a>
       </div>
       <ul class="nav_links">
-        <li class="link"><a href="#">Home</a></li>
-        <li class="link"><a href="#">Programs</a></li>
-        <li class="link"><a href="#">Service</a></li>
-        <li class="link"><a href="#">About</a></li>
-        <li class="link"><a href="#">Community</a></li>
+        <li class="link"><a href="#home">Home</a></li>
+        <li class="link"><a href="#programs">Programs</a></li>
+        <li class="link"><a href="#about">About</a></li>
+        <li class="link"><a href="#pricing">Pricing</a></li>
+        <li class="link"><a href="#community">Community</a></li>
       </ul>
       <button class="btn">Join Now</button>
     </nav>
@@ -46,7 +46,7 @@
     </header>
 
     
-    <div class="container">
+    <div class="container" id="programs">
       <h2 class="section_header">EXPLORE OUR PROGRAMS</h2>
       <div class="row">
         <div class="card mb-3 col-md-3" style="max-width: 18rem;">
@@ -88,6 +88,203 @@
       </div>
     </div>
 
+    <section class="section_container class_container">
+      <div class="class_image">
+        <span class="bg_blur"></span>
+        <img src="images/class-1.jpg" alt="class" class="class_img-1">
+        <img src="images/class-2.jpg" alt="class" class="class_img-2">
+      </div>
+      <div class="class_content">
+        <h2 class="section_header">OUR CLASSES</h2>
+        <p>
+          Led by our team of expert and motivational instructors, our classes
+          are a high-energy, result-driven sessions that combine
+          a perfect blend of cardio, strength training, and functional
+          exercises. Each class is carefully curated to keep you engaged and
+          challenged, ensuring you never hit a plateau in your fitness
+          endeavors.
+        </p>
+        <button class="btn">Book a Class</button>
+      </div>
+    </section>
+
+    <section class="section_container join_container" id="about">
+      <h2 class="section_header">WHY JOIN US?</h2>
+      <p class="section_subheader">
+        Our diverse membership base creates a friendly and supportive
+        atmosphere, where you can make friends and stay motivated.
+      </p>
+      <div class="join_image">
+        <img src="images/join.jpg" alt="Join" />
+        <div class="join_grid">
+          <div class="join_card">
+            <span><i class="ri-user-star-fill"></i></span>
+            <div class="join_card_content">
+              <h4>Personal Trainer</h4>
+              <p>Unlock your potential with our expert Personal Trainers.</p>
+            </div>
+          </div>
+          <div class="join_card">
+            <span><i class="ri-vidicon-fill"></i></span>
+            <div class="join_card_content">
+              <h4>Practice Sessions</h4>
+              <p>Elevate your fitness with practice sessions.</p>
+            </div>
+          </div>
+          <div class="join_card">
+            <span><i class="ri-building-line"></i></span>
+            <div class="join_card_content">
+              <h4>Good Management</h4>
+              <p>Supportive management, for your fitness success.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section_container price_container" id="pricing">
+      <h2 class="section_header">OUR PRICING PLAN</h2>
+      <p class="section_subheader">
+        Our pricing plan comes with various membership tiers, each tailored to
+        cater to different preferences and fitness aspirations.
+      </p>
+      <div class="price_grid">
+        <div class="price_card">
+          <div class="price_card_content">
+            <h4>Basic Plan</h4>
+            <h3>$16</h3>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              Smart workout plan
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              At home workouts
+            </p>
+          </div>
+          <button class="btn price_btn">Join Now</button>
+        </div>
+        <div class="price_card">
+          <div class="price_card_content">
+            <h4>Weekly Plan</h4>
+            <h3>$25</h3>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              PRO Gyms
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              Smart workout plan
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              At home workouts
+            </p>
+          </div>
+          <button class="btn price_btn">Join Now</button>
+        </div>
+        <div class="price_card">
+          <div class="price_card_content">
+            <h4>Monthly Plan</h4>
+            <h3>$45</h3>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              ELITE Gyms & Classes
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              PRO Gyms
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              Smart workout plan
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              At home workouts
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              Personal Training
+            </p>
+          </div>
+          <button class="btn price_btn">Join Now</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="review" id="community">
+      <div class="section_container review_container">
+        <span><i class="ri-double-quotes-r"></i></span>
+        <div class="review_content">
+          <h4>MEMBER REVIEW</h4>
+          <p>
+            What truly sets this gym apart is their expert team of trainers. The
+            trainers are knowledgeable, approachable, and genuinely invested in
+            helping members achieve their fitness goals. They take the time to
+            understand individual needs and create personalized workout plans,
+            ensuring maximum results and safety.
+          </p>
+          <div class="review_rating">
+            <span><i class="ri-star-fill"></i></span>
+            <span><i class="ri-star-fill"></i></span>
+            <span><i class="ri-star-fill"></i></span>
+            <span><i class="ri-star-fill"></i></span>
+            <span><i class="ri-star-half-fill"></i></span>
+          </div>
+          <div class="review_footer">
+            <div class="review_member">
+              <img src="images/member.jpg" alt="member">
+              <div class="review_member_details">
+                <h4>Jane Cooper</h4>
+                <p>Software Developer</p>
+              </div>
+            </div>
+            <div class="review_nav">
+              <span><i class="ri-arrow-left-line"></i></span>
+              <span><i class="ri-arrow-right-line"></i></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="section_container footer_container">
+      <div class="footer_col">
+        <div class="footer_logo"><img src="images/logo.png" alt="logo"></div>
+        <p>
+          Take the first step towards a healthier, stronger you with our
+          unbeatable pricing plans. Let's sweat, achieve, and conquer together!
+        </p>
+        <div class="footer_socials">
+          <a href="#"><i class="ri-facebook-fill"></i></a>
+          <a href="#"><i class="ri-instagram-line"></i></a>
+          <a href="#"><i class="ri-twitter-fill"></i></a>
+        </div>
+      </div>
+      <div class="footer_col">
+        <h4>Company</h4>
+        <a href="#">Business</a>
+        <a href="#">Franchise</a>
+        <a href="#">Partnership</a>
+        <a href="#">Network</a>
+      </div>
+      <div class="footer_col">
+        <h4>About Us</h4>
+        <a href="#">Blogs</a>
+        <a href="#">Security</a>
+        <a href="#">Careers</a>
+      </div>
+      <div class="footer_col">
+        <h4>Contact</h4>
+        <a href="#">Contact Us</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms & Conditions</a>
+      </div>
+    </footer>
+    <div class="footer_bar">
+      Copyright © 2024 FITCLUB. All rights reserved.
+    </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
