--- a/Projects/Project 1/index.html
+++ b/Projects/Project 1/index.html
@@ -23,7 +23,7 @@
         <li class="link"><a href="#pricing">Pricing</a></li>
         <li class="link"><a href="#community">Community</a></li>
       </ul>
-      <button class="btn">Join Now</button>
+      <button class="btn"><a href="./signup.html">Join Now</a></button>
     </nav>
 
 
