fixed font awesome

--- a/Projects/Project 2/index.html
+++ b/Projects/Project 2/index.html
@@ -17,7 +17,7 @@
 		<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
        
         <!--font-awesome.min.css-->
-        <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
         <!--linear icon css-->
 		<link rel="stylesheet" href="assets/css/linearicons.css">
@@ -370,7 +370,7 @@
 										<span class="explore-rating">5.0</span>
 										<a href="#"> 10 ratings</a> 
 										<span class="explore-price-box">
-											form
+											from
 											<span class="explore-price">5$-300$</span>
 										</span>
 										 <a href="#">resturent</a>
@@ -442,7 +442,7 @@
 										<span class="explore-rating">4.5</span>
 										<a href="#"> 8 ratings</a> 
 										<span class="explore-price-box">
-											form
+											from
 											<span class="explore-price">50$-500$</span>
 										</span>
 										 <a href="#">hotel</a>
@@ -515,7 +515,7 @@
 										<span class="explore-rating">5.0</span>
 										<a href="#"> 15 ratings</a> 
 										<span class="explore-price-box">
-											form
+											from
 											<span class="explore-price">5k$-10k$</span>
 										</span>
 										 <a href="#">destination</a>
@@ -590,7 +590,7 @@
 										<span class="explore-rating">5.0</span>
 										<a href="#"> 10 ratings</a> 
 										<span class="explore-price-box">
-											form
+											from
 											<span class="explore-price">10k$-15k$</span>
 										</span>
 										 <a href="#">real estate</a>
@@ -662,7 +662,7 @@
 										<span class="explore-rating">4.2</span>
 										<a href="#"> 8 ratings</a> 
 										<span class="explore-price-box">
-											form
+											from
 											<span class="explore-price">500$-1200$</span>
 										</span>
 										 <a href="#">automotion</a>
@@ -734,7 +734,7 @@
 										<span class="explore-rating">5.0</span>
 										<a href="#"> 15 ratings</a> 
 										<span class="explore-price-box">
-											form
+											from
 											<span class="explore-price">5k$-10k$</span>
 										</span>
 										 <a href="#">destination</a>
@@ -1159,11 +1159,11 @@
 						</div>
 						<div class="col-sm-7">
 							<div class="footer-social">
-								<span><i class="fa fa-phone"> +1  (222) 777 8888</i></span>
-								<a href="#"><i class="fa fa-facebook"></i></a>	
-								<a href="#"><i class="fa fa-twitter"></i></a>
-								<a href="#"><i class="fa fa-linkedin"></i></a>
-								<a href="#"><i class="fa fa-google-plus"></i></a>
+								<span><i class="fa fa-phone"></i> +1  (222) 777 8888</span>
+								<a href="#"><i class="fa-brands fa-facebook"></i></a>	
+								<a href="#"><i class="fa-brands fa-twitter"></i></a>
+								<a href="#"><i class="fa-brands fa-linkedin"></i></a>
+								<a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
 							</div>
 						</div>
 					</div>
