fixed bookmark icon

--- a/Projects/Project 2/index.html
+++ b/Projects/Project 2/index.html
@@ -357,7 +357,7 @@
 												</li>
 												<li>
 													<div class="single-explore-image-icon">
-														<i class="fa fa-bookmark-o"></i>
+														<i class="fa-regular fa-bookmark"></i>
 													</div>
 												</li>
 											</ul>
@@ -429,7 +429,7 @@
 												</li>
 												<li>
 													<div class="single-explore-image-icon">
-														<i class="fa fa-bookmark-o"></i>
+														<i class="fa-regular fa-bookmark"></i>
 													</div>
 												</li>
 											</ul>
@@ -502,7 +502,7 @@
 												</li>
 												<li>
 													<div class="single-explore-image-icon">
-														<i class="fa fa-bookmark-o"></i>
+														<i class="fa-regular fa-bookmark"></i>
 													</div>
 												</li>
 											</ul>
@@ -577,7 +577,7 @@
 												</li>
 												<li>
 													<div class="single-explore-image-icon">
-														<i class="fa fa-bookmark-o"></i>
+														<i class="fa-regular fa-bookmark"></i>
 													</div>
 												</li>
 											</ul>
@@ -649,7 +649,7 @@
 												</li>
 												<li>
 													<div class="single-explore-image-icon">
-														<i class="fa fa-bookmark-o"></i>
+														<i class="fa-regular fa-bookmark"></i>
 													</div>
 												</li>
 											</ul>
@@ -721,7 +721,7 @@
 												</li>
 												<li>
 													<div class="single-explore-image-icon">
-														<i class="fa fa-bookmark-o"></i>
+														<i class="fa-regular fa-bookmark"></i>
 													</div>
 												</li>
 											</ul>
