fix toggle content

--- a/Projects/Project 2/index.html
+++ b/Projects/Project 2/index.html
@@ -1051,45 +1051,70 @@
 				</div><!--/.section-header-->
 				<div class="blog-content">
 					<div class="row">
-						<div class="col-md-4 col-sm-6">
+						<div>
 							<div class="single-blog-item">
 								<div class="single-blog-item-img">
 									<img src="assets/images/blog/b1.jpg" alt="blog image">
 								</div>
 								<div class="single-blog-item-txt">
-									<h2><a href="#">How to find your Desired Place more quickly</a></h2>
+									<h2><a href="#">Discovering Your Perfect Travel Destination</a></h2>
 									<h4>posted <span>by</span> <a href="#">admin</a> march 2018</h4>
 									<p>
-										Lorem ipsum dolor sit amet, consectetur de adipisicing elit, sed do eiusmod tempore incididunt ut labore et dolore magna.
-									</p>
+										Dive into travel blogs, guidebooks, and online forums to gather inspiration and insights from 
+										fellow adventurers. Pay attention to factors like climate, budget, and accessibility to ensure a 
+										seamless and<span id="dots">...</span><span id="more"> enjoyable travel experience. Don't be afraid to think outside the box and consider 
+										destinations off the beaten path - sometimes, the most extraordinary experiences await in the 
+										most unexpected places. Once you've compiled a list of potential destinations, it's time to dig 
+										deeper. Explore virtual tours, watch travel documentaries, and read firsthand accounts to get a 
+										sense of each destination's atmosphere and allure. Look for experiences and activities that 
+										align with your interests, whether it's sampling local cuisine, immersing yourself in history 
+										and culture, or embarking on thrilling outdoor adventures.
+									</span></p>
+									<button onclick="toggleContent()" id="single-blog-item-btn">Show more <i class="fa-solid fa-chevron-down"></i></button>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-sm-6">
+						<div>
 							<div class="single-blog-item">
 								<div class="single-blog-item-img">
 									<img src="assets/images/blog/b2.jpg" alt="blog image">
 								</div>
 								<div class="single-blog-item-txt">
-									<h2><a href="#">How to find your Desired Place more quickly</a></h2>
+									<h2><a href="#">Embracing Serendipity: The Joy of Spontaneous Travel</a></h2>
 									<h4>posted <span>by</span> <a href="#">admin</a> march 2018</h4>
 									<p>
-										Lorem ipsum dolor sit amet, consectetur de adipisicing elit, sed do eiusmod tempore incididunt ut labore et dolore magna.
-									</p>
+										The beauty of spontaneous travel lies in its unpredictability. You never know what hidden 
+										gems you might stumble upon or what serendipitous encounters await around the next corner. 
+										Whether it's stumbling<span id="dots">...</span><span id="more"> upon a quaint café tucked away in a cobblestone alleyway, striking 
+										up a conversation with a local artisan, or stumbling upon a breathtaking viewpoint just off
+										the beaten path, every moment becomes a precious memory to cherish. Of course, spontaneous 
+										travel isn't without its challenges. It requires a willingness to embrace uncertainty and a
+										readiness to adapt to whatever circumstances may arise. But therein lies the magic - in the 
+										spontaneity and unpredictability that make each journey a truly unique and unforgettable 
+										experience.
+									</span></p>
+									<button onclick="toggleContent()" id="single-blog-item-btn">Show more <i class="fa-solid fa-chevron-down"></i></button>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-sm-6">
+						<div>
 							<div class="single-blog-item">
 								<div class="single-blog-item-img">
 									<img src="assets/images/blog/b3.jpg" alt="blog image">
 								</div>
 								<div class="single-blog-item-txt">
-									<h2><a href="#">How to find your Desired Place more quickly</a></h2>
+									<h2><a href="#">Finding Solitude in Remote Destinations: The Beauty of Off-the-Grid Travel</a></h2>
 									<h4>posted <span>by</span> <a href="#">admin</a> march 2018</h4>
 									<p>
-										Lorem ipsum dolor sit amet, consectetur de adipisicing elit, sed do eiusmod tempore incididunt ut labore et dolore magna.
-									</p>
+										Whether it's camping under the stars in the heart of the desert, trekking through dense 
+										rainforests in search of hidden waterfalls, or sailing to secluded islands only accessible 
+										by boat, off-the-grid travel<span id="dots">...</span><span id="more"> opens doors to experiences that few have the opportunity to 
+										discover. But off-the-grid travel isn't just about escaping civilization - it's also about 
+										immersing yourself in the natural beauty and cultural richness of the destinations you visit. 
+										From learning ancient survival skills from indigenous tribes to witnessing wildlife in their 
+										natural habitats, every moment becomes an opportunity for connection and exploration.
+									</span></p>
+									<button onclick="toggleContent()" id="single-blog-item-btn">Show more <i class="fa-solid fa-chevron-down"></i></button>
 								</div>
 							</div>
 						</div>
