started dark theme

--- a/Projects/Project 2/index.html
+++ b/Projects/Project 2/index.html
@@ -92,7 +92,7 @@
 								</select>
 							</li>
 							<li class="select-opt">
-								<a href="#"><span class="lnr lnr-magnifier"></span></a>
+								<a href="#" class="dark-mode"><i class="fa-solid fa-moon"></i></a>
 							</li>
 						</ul>
 					</div>
@@ -1124,7 +1124,7 @@
 										align with your interests, whether it's sampling local cuisine, immersing yourself in history 
 										and culture, or embarking on thrilling outdoor adventures.
 									</span></p>
-									<button onclick="toggleContent('dots1', 'more1', 'single-blog-item-btn1')" id="single-blog-item-btn1" class="single-blog-item-btn">Show more <i class="fa-solid fa-chevron-down"></i></button>
+									<button id="single-blog-item-btn1" class="single-blog-item-btn">Show more <i class="fa-solid fa-chevron-down"></i></button>
 								</div>
 							</div>
 						</div>
@@ -1147,7 +1147,7 @@
 										spontaneity and unpredictability that make each journey a truly unique and unforgettable 
 										experience.
 									</span></p>
-									<button onclick="toggleContent('dots2', 'more2', 'single-blog-item-btn2')" id="single-blog-item-btn2" class="single-blog-item-btn">Show more <i class="fa-solid fa-chevron-down"></i></button>
+									<button id="single-blog-item-btn2" class="single-blog-item-btn">Show more <i class="fa-solid fa-chevron-down"></i></button>
 								</div>
 							</div>
 						</div>
@@ -1168,7 +1168,7 @@
 										From learning ancient survival skills from indigenous tribes to witnessing wildlife in their 
 										natural habitats, every moment becomes an opportunity for connection and exploration.
 									</span></p>
-									<button id="single-blog-item-btn3" class="single-blog-item-btn" onclick="toggleContent('dots3', 'more3', 'single-blog-item-btn3')">Show more <i class="fa-solid fa-chevron-down"></i></button>
+									<button id="single-blog-item-btn3" class="single-blog-item-btn">Show more <i class="fa-solid fa-chevron-down"></i></button>
 								</div>
 							</div>
 						</div>
