finished theme switch

--- a/Projects/Project 2/index.html
+++ b/Projects/Project 2/index.html
@@ -92,7 +92,7 @@
 								</select>
 							</li>
 							<li class="select-opt">
-								<a href="#" class="dark-mode"><i class="fa-solid fa-moon"></i></a>
+								<button href="#" class="dark-mode" id="dark-mode"><i class="fa-solid fa-moon"></i></button>
 							</li>
 						</ul>
 					</div>
@@ -871,7 +871,7 @@
 									<img src="assets/images/clients/c3.png" alt="clients">
 								</div><!--/.testimonial-img-->
 								<div class="testimonial-person">
-									<h2>Shohrab Hossain</h2>
+									<h2>Sorab Hossain</h2>
 									<h4>london, UK</h4>
 									<div class="testimonial-person-star">
 										<i class="fa fa-star"></i>
@@ -971,7 +971,7 @@
 									<img src="assets/images/clients/c3.png" alt="clients">
 								</div><!--/.testimonial-img-->
 								<div class="testimonial-person">
-									<h2>Shohrab Hossain</h2>
+									<h2>Sorab Hossain</h2>
 									<h4>london, UK</h4>
 									<div class="testimonial-person-star">
 										<i class="fa fa-star"></i>
