started explore.html

--- a/Projects/Project 2/index.html
+++ b/Projects/Project 2/index.html
@@ -135,7 +135,7 @@
 			                    <li><a href="#home">home</a></li>
 			                    <li><a href="#explore">explore</a></li>
 			                    <li><a href="#blog">blog</a></li>
-								<li><a href="#profile">profile</a></li>
+								<li><a href="#account">my account</a></li>
 								<li><a href="#"><button href="#" class="dark-mode" id="dark-mode"><i class="fa-solid fa-moon"></i></button></a></li>
 			                </ul>
 			            </div>
@@ -148,7 +148,7 @@
 		<main id="spapp" role="main">
 			<section id="explore"></section>
 			<section id="blog"></section>
-			<section id="profile"></section>
+			<section id="account"></section>
 			<section id="home"></section>
 		</main>
 
